<resources>
    <string name="app_name">FamilyMapApp</string>
    <string name="user_name">User Name:</string>
    <string name="server_port">Server Port:</string>
    <string name="server_host">Server Host:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_on_a_marker">Click on a marker</string>
    <string name="click_on_a_marker_to_display_info">Click on a marker to Display info!</string>
    <string name="eventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY MEMBERS</string>
    <string name="first_name_placeholder">First Name PlaceHolder</string>
    <string name="last_name_place_holder">Last Name Place Holder</string>
    <string name="first_name_1">First Name</string>
    <string name="last_name_1">Last Name</string>
    <string name="gender_1">Gender</string>
    <string name="gender_place_holder">Gender Place Holder</string>
    <string name="family_map">Family Map</string>
    <string name="search" />
    <string name="settings" />
    <string name="title_activity_settings">Settings</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="male_events">Male Events</string>
</resources>
