<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:stretchColumns="3">



        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/server_host_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="text"
                android:text="10.0.2.2" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/server_port" />

            <EditText
                android:id="@+id/server_port_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="number"
                android:text="8080" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/user_name" />

            <EditText
                android:inputType="textNoSuggestions"
                android:id="@+id/username_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/password" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/first_name" />

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/first_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/last_name" />

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/last_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/email" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_column="1"
                android:gravity="right"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:paddingEnd="24dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:paddingEnd="24dp"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>