<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout android:id="@+id/lifeStoryLinesLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/lifeStoryLinesTexts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lifeStoryLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Life Story Lines"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/lifeStoryLinesSubtitle"
                    android:text="SHOW LIFE STORY LINES"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>



            <Switch
                android:id="@+id/lifeStoryLinesSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@+id/lifeStoryLinesDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/familyTreeLinesLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/familyTreeLinesTexts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/familyTreeLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Family Tree Lines"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/familyTreeLinesSubtitle"
                    android:text="SHOW FAMILY TREE LINES"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>



            <Switch
                android:id="@+id/familyTreeLinesSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>


        <View
            android:id="@+id/familyTreeLinesDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/spouseLinesLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/spouseLinesTexts"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spouseLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Spouse Lines"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spouseLinesSubtitle"
                    android:text="SHOW SPOUSE LINES"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/spouseLinesSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>


        <View
            android:id="@+id/fathersSideDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/fathersLinesLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/fathersSide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"

                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fathersSideLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Father's Side"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fathersSideLines"
                    android:text="@string/filter_by_father_s_side_of_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/fathersLineSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@id/familyTreeLinesDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/MothersSideLineLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/MothersSideLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/motherLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mother_s_side"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mothersLineSubtitle"
                    android:text="@string/filter_by_mother_s_side_of_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/mothersLinesSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@+id/MaleEventsDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/maleEventsLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/maleEventsText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maleLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/male_events"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maleLinesSubtext"
                    android:text="@string/filter_events_based_on_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/maleEventsSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@+id/femalEventsDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/femaleEventsLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/femaleEventsText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/femaleEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female_events"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/femaleLinesSubtitles"
                    android:text="@string/filter_events_based_on_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/femaleEventsSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@+id/reSyncDataDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <LinearLayout android:id="@+id/logoutLayout"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout android:id="@+id/logoutTexts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="Logout"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/logoutSubtitle"
                    android:text="RETURNS TO LOGIN SCREEN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/logoutDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    </LinearLayout>

</FrameLayout>